Fri Jul 29 14:14:16 2005  Paul Calabrese  <calabrese_p@ociweb.com>

        * performance-tests/DCPS/TCPListenerTest/publisher.cpp:

          Fix a variable scoping issue for VC6.

Fri Jul 29 12:48:42 2005  Paul Calabrese  <calabrese_p@ociweb.com>

        * DDS_release_notes.txt:

          Updated the release notes (and renamed them).

        * VERSION:

          Added a version file.

        * DDS_realease_notes.txt:

          Removed this file.

Fri Jul 29 12:35:25 2005  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/DCPS/DataBlockLockPool.h:

          Remove explicit scope that was causing problems for VC6.

        * tests/DCPS/DCPSInfoRepo/run_test.pl:

          Clean up this test a little.

Thu Jul 28 14:08:44 USMST 2005  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          Fixed memory leak.
          - Removed an extra get_name() call on topic which duplicates
            the string.

Thu Jul 28 13:43:58 USMST 2005  Yan Dai  <dai_y@ociweb.com>

        * performance-tests/DCPS/TCPListenerTest/publisher.cpp:
        * performance-tests/DCPS/TCPListenerTest/subscriber.cpp:

          Fixed the memory leak of the Pt*TypeSupportImpl servant.

Thu Jul 28 13:17:03 USMST 2005  Yan Dai  <dai_y@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:

          Fixed memory leak of DataReaderRemote object references.
          - Made the get_dr_obj_ref () assign to a DataReader_var
            since the accessor duplicates object reference count.

        * dds/DCPS/Marked_Default_Qos.cpp:

          Fixed memory leak of DomainParticipantFactory object reference.
          - Made TheParticipantFactory assign to
            DomainParticipantFactory_var since the TheParticipantFactory
            duplicates the object reference count.

        * dds/DCPS/WriteDataContainer.cpp:

          Fixed memory leak of the registered sample data and the
          PublicationInstance object.